# COOLing

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/: AutoSourceGroup.cmake
cooling/: CMakeLists.txt
shaders/: Camera.fragmentShader  Camera.vertexShader  Cube.fragmentShader  FragmentShader.txt  SimpleObj.frag  SimpleObj.fragmentShader  SimpleObj.vert  VertexShader.txt
source/cooling/: CMakeLists.txt  culling_manager.cpp  culling_manager.hpp  frustum_view.cpp  frustum_view.hpp  object.cpp  object.hpp  test_dll.cpp  test_dll.hpp
source/cooling/algorithms/: algorithm.hpp  basic_culling_algorithm.cpp  basic_culling_algorithm.hpp  bounding_volume_hierarchy.cpp  bounding_volume_hierarchy.hpp  octree.cpp  octree.hpp  regular_space_partitioning.cpp  regular_space_partitioning.hpp
source/cooling/export/: cooling_dll.hpp
source/cooling/occlusion_query/: queries_manager.cpp  queries_manager.hpp  query.cpp  query.hpp
source/cooling/profiler/: profiler.cpp  profiler.hpp  profiler_cache.hpp
source/cooling/utils/: aabb.cpp  aabb.hpp  visibility_tests.cpp  visibility_tests.hpp
source/imgui/: CMakeLists.txt
source/main/: CMakeLists.txt  main.cpp
source/main/core/: application.cpp  application.hpp  culling_wrapper.hpp  window.cpp  window.hpp
source/main/core/camera/: camera.cpp  camera.hpp  camera_manager.cpp  camera_manager.hpp
source/main/core/clock/: clock.cpp  clock.hpp
source/main/core/drawers/: camera_drawer.cpp  camera_drawer.hpp  obj_model_drawer.cpp  obj_model_drawer.hpp  simple_obj_drawer.cpp  simple_obj_drawer.hpp
source/main/core/settings/: scene_settings.hpp  window_settings.hpp
source/main/core/shader/: shader.hpp
source/main/core/signal/: signal.hpp
source/main/models/: cube.cpp  cube.hpp  cube_manager.cpp  cube_manager.hpp  obj_model.cpp  obj_model.hpp  obj_model_manager.cpp  obj_model_manager.hpp
